--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,14 +4,17 @@
 
 @font-face {
   font-family: 'Inter';
-  src: local('Inter'),
+  src:
+    local('Inter'),
     url('./assets/fonts/Inter/static/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Satoshi';
-  src: local('Satoshi'),
-    url('./assets/fonts/Satoshi/Fonts/TTF/Satoshi-Variable.ttf') format('truetype');
+  src:
+    local('Satoshi'),
+    url('./assets/fonts/Satoshi/Fonts/TTF/Satoshi-Variable.ttf')
+      format('truetype');
 }
 
 :root {
